--- a/jobdelas/src/main/resources/application.properties
+++ b/jobdelas/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jobdelas?useTimezone=true&serv
 
 # Editar os dados de user e password para o da sua maquina
 spring.datasource.username=root
-spring.datasource.password=12345a
+spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
