--- a/jobdelas/src/main/resources/application.properties
+++ b/jobdelas/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/jobdelas?useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=true 
