Banco de dados online

--- a/jobdelas/src/main/resources/application.properties
+++ b/jobdelas/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jobdelas?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:42028/jobdelas?useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=EH5AdcDfAbE4hBa6b2Hh64FA-2hfabed
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
