--- a/jobdelas/src/Dockerfile
+++ b/jobdelas/src/Dockerfile
@@ -1,8 +1,16 @@
-FROM maven:3.8.5-openjdk-17 AS build
-COPY . .
-RUN mvn clean package -DskipTests
+FROM ubuntu:latest AS build
 
-FROM openjdk:17.0.1-jdk-slim
-COPY --from=build /target/squad05-0.0.1-SNAPSHOT.jar squad05.jar
+RUN apt-get update
+RUN apt-get install openjdk-17-jdk -y
+COPY . .
+
+RUN apt-get install maven -y
+RUN mvn clean install 
+
+FROM openjdk:17-jdk-slim
+
 EXPOSE 8080
-ENTRYPOINT [ "java","-jar","squad05.jar" ]
+
+COPY --from=build /target/jobdelas_projetomvc-1.0.0.jar app.jar
+
+ENTRYPOINT [ "java", "-jar", "app.jar" ]
