Email automatizado - confirmação de cadastro

--- a/jobdelas/src/main/resources/application.properties
+++ b/jobdelas/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.password=EH5AdcDfAbE4hBa6b2Hh64FA-2hfabed
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=squad05recodepro@gmail.com
+spring.mail.password=ydzjbmzuxqlcboys
+# spring.mail.password=nmvb kgng uqln bvrc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
