--- a/jobdelas/pom.xml
+++ b/jobdelas/pom.xml
@@ -58,6 +58,7 @@
 			<version>1.18.30</version>
 			<scope>provided</scope>
         </dependency>
+		
 		<dependency>
 			<groupId>at.favre.lib</groupId>
 			<artifactId>bcrypt</artifactId>
@@ -70,6 +71,12 @@
 <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-freemarker</artifactId>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-websocket</artifactId>
+    <version>6.0.13</version>
 </dependency>
 
 	</dependencies>
