--- a/jobdelas/pom.xml
+++ b/jobdelas/pom.xml
@@ -71,6 +71,10 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-freemarker</artifactId>
 </dependency>
+<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
 
 	</dependencies>
 
