--- a/jobdelas/pom.xml
+++ b/jobdelas/pom.xml
@@ -72,10 +72,10 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-freemarker</artifactId>
 </dependency>
-<dependency>
+<!-- <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
+    </dependency> -->
 
 <dependency>
     <groupId>org.springframework</groupId>
