--- a/jobdelas/pom.xml
+++ b/jobdelas/pom.xml
@@ -24,9 +24,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
