--- a/jobdelas/src/main/resources/application.properties
+++ b/jobdelas/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:42028/jobdelas?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=EH5AdcDfAbE4hBa6b2Hh64FA-2hfabed
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.show-sql=true 
 
 
 spring.mail.host=smtp.gmail.com
